possible fix for text input on iOS

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -426,7 +426,9 @@ input[type="radio"]:checked+label {
 }
 
 input[type='text'] {
+    -webkit-touch-callout: text;
     -webkit-user-select: text;
+    user-select: text;
 }
 
 #panel_button0,
